# AsteroidsLike

./: .gitignore  CMakeLists.txt  README.md  SpriteFight
About/: Acknowledgments.txt  Credits.txt  README.md  Roboto Font Apache License.rtf  SDL 2_0 LICENSE.txt
Adapter/: Adapter.cpp  Adapter.h  Adapter.hpp  AdapterInterface.cpp  AdapterInterface.h  AdapterInterface.hpp  AdapterUtil.cpp  AdapterUtil.h  TestAdapter.cpp  TestAdapter.h  TestAdapter.hpp
Assets/Developer/: Default.dvtcolortheme
AsteroidsLike.xcodeproj/: project.pbxproj
AsteroidsLike.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CompilerOutput/AsteroidsLike/: info.plist
Control/: Configuration.cpp  Configuration.h  DefaultConfig.cpp  DefaultConfig.h  GlobalVar.h  Input.cpp  Input.hpp  MainController.cpp  MainController.h  Player.cpp  Player.h  main.cpp
Docs/: Doxyfile
Docs/html/: Makefile  Nodes.xml  Tokens.xml  _ability_8cpp.html  _ability_8cpp_source.html  _ability_8h.html  _ability_8h_source.html  _asset_file_i_o_8cpp.html  _asset_file_i_o_8cpp_source.html  _asset_file_i_o_8h.html  _asset_file_i_o_8h.js  _asset_file_i_o_8h_source.html  _basic_concurrency_8cpp.html  _basic_concurrency_8cpp_source.html  _basic_concurrency_8h.html  _basic_concurrency_8h_source.html  _bounds_check_8hpp.html  _bounds_check_8hpp_source.html  _character_8cpp.html  _character_8cpp_source.html  _character_8h.html  _character_8h_source.html  _character_data_8h.html  _character_data_8h_source.html  _configuration_8cpp.html  _configuration_8cpp_source.html  _configuration_8h.html  _configuration_8h_source.html  _console_output_8cpp.html  _console_output_8cpp_source.html  _console_output_8hpp.html  _console_output_8hpp_source.html  _debug_8cpp.html  _debug_8cpp_source.html  _debug_8h.html  _debug_8h_source.html  _decl___apple_8h.html  _decl___apple_8h_source.html  _default_config_8h.html  _default_config_8h_source.html  (+299 more)
Docs/latex/: _ability_8cpp.tex  _ability_8h.tex  _asset_file_i_o_8cpp.tex  _asset_file_i_o_8h.tex  _basic_concurrency_8cpp.tex  _basic_concurrency_8h.tex  _debug_8h.tex  (+140 more)
GameWorld/: Ability.cpp  Ability.h  AddlEnums.h  BaseInterface.cpp  BaseInterface.h  Character.cpp  Character.h  CharacterData.h  Debug.cpp  Debug.h  Enemy.cpp  Enemy.h  ForwardDecl.h  GameData.cpp  GameData.h  GameEvent.cpp  GameEvent.h  GameInterface.h  GameMap.hpp  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  GameWorld.1  Location.h  MainController.cpp  MainController.h  Message.cpp  Message.h  NPC.cpp  NPC.h  Util.cpp  Util.h  World.cpp  World.h  WorldController.cpp  WorldController.h  main.cpp  main.h
GameWorld.xcodeproj/: project.pbxproj
GameWorldOutputExample/: GameWorldOutputExample.1  main.cpp
Input/: Input.cpp  Input.h
Output/: Adapter.hpp  AdapterInterface.hpp  AdapterUtil.cpp  AdapterUtil.h  ConsoleOutput.cpp  ConsoleOutput.hpp  Decl_Apple.h  DisplayData.h  DisplayData.mm  GameColor.cpp  GameColor.h  GraphicalOutput.cpp  GraphicalOutput.h  GraphicsData.hpp  OutputAdapter.hpp  OutputData.hpp  TestAdapter.hpp  TestOutputAdapter.hpp  TextOutput.cpp  TextOutput.h  TextOutput.hpp  WindowOutput.cpp  WindowOutput.h
SpriteFight.xcodeproj/: project.pbxproj
Test/: main.cpp
Untitled.xcworkspace/: contents.xcworkspacedata
User Configuration/: Dark.dvtcolortheme
Util/: AssetFileIO.cpp  AssetFileIO.h  BasicConcurrency.cpp  BasicTime.h  BoundsCheck.hpp  Configuration.h  Debug.cpp  Debug.h  Decl_Apple.h  GameRandom.cpp  GameRandom.hpp  HardwareRand.c  Location.h  Location.hpp  Navigator.cpp  Navigator.h  Navigator.hpp  OpenClUtil.cpp  OpenClUtil.h  Position.hpp  Size.cpp  Size.hpp  Speed.hpp  Time.h  Time.hpp  Timer.cpp  Timer.hpp  Util.cpp  Util.h  Util.hpp  Util.mm  Util2.cpp  Util2.h  Velocity.cpp  Velocity.hpp
World/: Ability.h  Character.cpp  Character.h  CharacterData.h  Enemy.cpp  Enemy.h  ForwardDecl.h  GameEvent.cpp  GameEvent.h  GameInterface.h  GameMap.hpp  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  GameState.hpp  Message.h  NPC.cpp  NPC.h  PlayerCharacter.cpp  PlayerCharacter.h  Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h  WorldController.cpp  WorldController.h
(+750 files in other folders)
